Atualizando URL do backend

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <div class="faq-item" onclick="toggleFaq(this)">
             <div class="faq-question">
-                <span>Existe Fidelidade de contrato?</span>
+                <span>Existe fidelidade de contrato?</span>
                 <span class="faq-icon">➕</span>
             </div>
             <div class="faq-answer">
