--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
             <form action="/send-email" id="formulario" method="post" enctype="multipart/form-data">
                 <div class="nome-input">
                     <input type="text" id="nome" name="nome" placeholder="Nome" required>
+                    
                 </div>
                 <div class="phone-input">
                     <input class="ddd" type="text" id="ddd" name="ddd" placeholder="DDD" required>
-                    <input class="tel" type="tel" id="telefone" name="telefone" placeholder="Telefone" required>
+                    <input type="number" class='ddd' id="ddd" name="ddd" minlength="2" maxlength="2" required oninput="this.value = this.value.slice(0, 2)">
+
+                    <input class="tel" type="tel" id="telefone" name="telefone" required minlength="10" maxlength="10" placeholder="99999-9999">
                 </div>
                 <div class="nome-input">
                     <input type="email" id="email" name="email" placeholder="Email" required> 
