--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     
                 </div>
                 <div class="phone-input">
-                    <input type="number" class='ddd' id="ddd" name="ddd" minlength="2" maxlength="2" required oninput="this.value = this.value.slice(0, 2)">
+                    <input type="number" class='ddd' id="ddd" name="ddd" minlength="2" maxlength="2" placeholder="81" required oninput="this.value = this.value.slice(0, 2)">
 
                     <input class="tel" type="tel" id="telefone" name="telefone" required minlength="10" maxlength="10" placeholder="99999-9999">
                 </div>
