--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Energia Solar - Geração Compartilhada</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/Imagens/letter-f.png">
 </head>
 <body>
     <header>
-        <img src="/Imagens/LOGO SANTA ADELIA-04.png" alt="Logo da Empresa">
+        <img src="/Imagens/FF ENERGIA LOGO-02.png" alt="Logo da Empresa">
         <div class="menu-toggle">☰</div> <!-- Ícone de menu hamburguer -->
         <nav class="nav-links">
             <a href="#inicio">Início</a>
@@ -278,7 +279,7 @@
 
 
     <footer>
-        <p>© 2025 Santa Adélia Energia - Todos os direitos reservados</p>
+        <p>© 2025 FF Energia - Todos os direitos reservados</p>
     </footer>
 </body>
 </html>
