--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Energia Solar - Geração Compartilhada</title>
+    <title>FF Energia Sustentável</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/Imagens/letter-f.png">
 </head>
